--- a/browsers.html
+++ b/browsers.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Responsive Admin Dashboard Template">
         <meta name="keywords" content="admin,dashboard">
         <meta name="author" content="stacks">
-        <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в заголовке; любое другое содержимое заголовка должно быть *после* этих тегов -->
 
         <!-- Title -->
         <title>AquaPrograms - Браузеры</title>
@@ -91,10 +91,10 @@
                         <a href=""><i class="material-icons">code</i>Plugins<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="plugins-crop.html">Image Crop</a>
+                                <a href="plugins-crop.html">Обрезание изображения</a>
                             </li>
                             <li>
-                                <a href="plugins-zoom.html">Image Zoom</a>
+                                <a href="plugins-zoom.html">Приближение изображение</a>
                             </li>
                             <li>
                                 <a href="plugins-select2.html">Select2</a>
@@ -111,10 +111,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="charts.html"><i class="material-icons">bar_chart</i>Charts</a>
+                        <a href="charts.html"><i class="material-icons">bar_chart</i>Графики</a>
                     </li>
                     <li>
-                        <a href="forms.html"><i class="material-icons">input</i>Forms</a>
+                        <a href="forms.html"><i class="material-icons">input</i>Формы</a>
                     </li>
                     <li class="sidebar-title">
                         Остальное
@@ -129,16 +129,16 @@
                                 <a href="500.html">500</a>
                             </li>
                             <li>
-                                <a href="sign-in.html">Sign In</a>
+                                <a href="sign-in.html">Вход</a>
                             </li>
                             <li>
-                                <a href="sign-up.html">Sign Up</a>
+                                <a href="sign-up.html">Регистрация</a>
                             </li>
                             <li>
-                                <a href="lock-screen.html">Lock Screen</a>
+                                <a href="lock-screen.html">Экран блокировки</a>
                             </li>
                             <li>
-                                <a href="coming-soon.html">Coming Soon</a>
+                                <a href="coming-soon.html">Скоро</a>
                             </li>
                             <li>
                                 <a href="invoice.html">Invoice</a>
@@ -147,15 +147,15 @@
                                 <a href="pricing-tables.html">Pricing Tables</a>
                             </li>
                             <li>
-                                <a href="help-center.html">Help Center</a>
+                                <a href="help-center.html">Центр помощи</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="material-icons">bookmark_border</i>Documentation</a>
+                        <a href="#"><i class="material-icons">bookmark_border</i>Документация</a>
                     </li>
                     <li>
-                        <a href="#"><i class="material-icons">access_time</i>Change Log</a>
+                        <a href="#"><i class="material-icons">access_time</i>Список изменений</a>
                     </li>
                 </ul>
             </div>
@@ -165,7 +165,7 @@
         <div class="theme-settings-sidebar">
             <div class="theme-settings-inner">
                 <h3 class="theme-sidebar-title">Темы</h3>
-                <p class="themes-info">Выберите тему</p>
+                <p class="themes-info">Выбрать тему</p>
 
                 <a class="theme-item active" href="#">
                     <img src="assets/images/themes/1.png" alt="">
@@ -269,7 +269,7 @@
                                   <div class="card-body file-info">
                                       <p>music_1.mp3</p>
                                       <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Last Accessed: 7 hours ago</span>
+                                      <span class="file-date">Последний доступ: 7 дней назад</span>
                                   </div>
                               </div>
                           </div>
@@ -281,7 +281,7 @@
                                   <div class="card-body file-info">
                                       <p>music_1.mp3</p>
                                       <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Last Accessed: 7 hours ago</span>
+                                      <span class="file-date">Последний доступ: 7 дней назад</span>
                                   </div>
                               </div>
                           </div>
@@ -293,7 +293,7 @@
                                   <div class="card-body file-info">
                                       <p>music_1.mp3</p>
                                       <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Last Accessed: 7 hours ago</span>
+                                      <span class="file-date">Последний доступ: 7 дней назад</span>
                                   </div>
                               </div>
                           </div>
