--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +7,9 @@
         <meta name="description" content="Responsive Admin Dashboard Template">
         <meta name="keywords" content="admin,dashboard">
         <meta name="author" content="stacks">
-        <!-- The above 6 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в загаловке; любое другое содержимое заголовка должно быть *после* этих тегов -->
 
-        <!-- Title -->
+        <!-- Название страницы -->
         <title>AquaPrograms - Главная</title>
 
         <!-- Styles -->
@@ -54,11 +54,12 @@
                                 <a href="styles-typography.html">Популярные</a>
                             </li>
                             <li>
-                                <a href="styles-code.html">Красивые</a>
+                                <a href="styles-code.html">Для интерфейсов</a>
                             </li>
                             <li>
-                                <a href="styles-code.html">3Д шрифты</a>
+                                <a href="styles-code.html">Рукописные</a>
                             </li>
+                        <!-- Нужно добавить: "Семейства Sans Serif", "Семейства Serif", "Семейства Slab Serif" -->    
                         </ul>
                     </li>
                     <li>
@@ -88,13 +89,13 @@
                         </ul>
                     </li>
                     <li>
-                        <a href=""><i class="material-icons">code</i>Plugins<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+                        <a href=""><i class="material-icons">code</i>Плагины<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="plugins-crop.html">Image Crop</a>
+                                <a href="plugins-crop.html">Обрезание изображения</a>
                             </li>
                             <li>
-                                <a href="plugins-zoom.html">Image Zoom</a>
+                                <a href="plugins-zoom.html">Приближение изображения</a>
                             </li>
                             <li>
                                 <a href="plugins-select2.html">Select2</a>
@@ -111,10 +112,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="charts.html"><i class="material-icons">bar_chart</i>Charts</a>
+                        <a href="charts.html"><i class="material-icons">bar_chart</i>Графики</a>
                     </li>
                     <li>
-                        <a href="forms.html"><i class="material-icons">input</i>Forms</a>
+                        <a href="forms.html"><i class="material-icons">input</i>Формы</a>
                     </li>
                     <li class="sidebar-title">
                         Остальное
@@ -129,16 +130,16 @@
                                 <a href="500.html">500</a>
                             </li>
                             <li>
-                                <a href="sign-in.html">Sign In</a>
+                                <a href="sign-in.html">Вход</a>
                             </li>
                             <li>
-                                <a href="sign-up.html">Sign Up</a>
+                                <a href="sign-up.html">Регистрация</a>
                             </li>
                             <li>
-                                <a href="lock-screen.html">Lock Screen</a>
+                                <a href="lock-screen.html">Экран блокировки</a>
                             </li>
                             <li>
-                                <a href="coming-soon.html">Coming Soon</a>
+                                <a href="coming-soon.html">Скоро</a>
                             </li>
                             <li>
                                 <a href="invoice.html">Invoice</a>
@@ -147,15 +148,15 @@
                                 <a href="pricing-tables.html">Pricing Tables</a>
                             </li>
                             <li>
-                                <a href="help-center.html">Help Center</a>
+                                <a href="help-center.html">Центр помощи</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="material-icons">bookmark_border</i>Documentation</a>
+                        <a href="#"><i class="material-icons">bookmark_border</i>Документация</a>
                     </li>
                     <li>
-                        <a href="#"><i class="material-icons">access_time</i>Change Log</a>
+                        <a href="#"><i class="material-icons">access_time</i>Список изменений</a>
                     </li>
                 </ul>
             </div>
@@ -165,7 +166,7 @@
         <div class="theme-settings-sidebar">
             <div class="theme-settings-inner">
                 <h3 class="theme-sidebar-title">Темы</h3>
-                <p class="themes-info">Выберите тему</p>
+                <p class="themes-info">Выбрать тему</p>
 
                 <a class="theme-item active" href="#">
                     <img src="assets/images/themes/1.png" alt="">
@@ -226,8 +227,8 @@
                       <img src="assets/images/epicgames.jpg" class="card-img-top" alt="Placeholder">
                         <div class="card-body">
                           <h5 class="card-title">Раздача Epic Games</h5>
-                            <p class="card-text">Стреляйте и хватайте добычу, исследуя безумный мир Пандоры в BORDERLANDS 2 и лунные пейзажи в BORDERLANDS: THE PRE-SEQUEL с коллекцией BORDERLANDS: THE HANDSOME COLLECTION.</p>
-                            <span class="badge badge-warning">Действует до 4 июня до 20:00</span><br><br>
+                            <p class="card-text">BORDERLANDS 2 и BORDERLANDS: THE PRE-SEQUEL в коллекции BORDERLANDS: THE HANDSOME COLLECTION.</p>
+                            <span class="badge badge-warning">Действует до 4 июня 18:00 МСК</span><br><br>
                             <a href="https://www.epicgames.com" target="_blank" class="btn btn-primary">На сайт</a>
                         </div>
                       </div>
@@ -284,7 +285,7 @@
                                                 <td>Manjaro</td>
                                                 <td>Отлично</td>
                                                 <td>Arch</td>
-                                                <td>[описание]</td>
+                                                <td>Вы можете установить почти все пакеты из AUR`а, почти всё новейшее, но стабильность не гарантируется</td>
                                                 <td>
                                                     <a class="btn btn-primary target="_blank"" href="https://manjaro.org/download/">Manjaro</a> 
                                                 </td>
