--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                                 <td>Arch</td>
                                                 <td>Вы можете установить почти все пакеты из AUR`а, почти всё новейшее, но стабильность не гарантируется</td>
                                                 <td>
-                                                    <a class="btn btn-primary target="_blank"" href="https://manjaro.org/download/">Manjaro</a> 
+                                                    <a class="btn btn-primary target="_blank"" href="https://manjaro.org/download/" style="padding: 0px 5px 0px 5px;">Manjaro</a> 
                                                 </td>
                                             </tr>
                                         </tbody>
