--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <li>
                                 <a href="styles-code.html">Рукописные</a>
                             </li>
-                        <!-- Нужно добавить: "Семейства Sans Serif", "Семейства Serif", "Семейства Slab Serif" -->    
+                        <!-- Нужно добавить: "Семейства Sans Serif", "Семейства Serif", "Семейства Slab Serif" -->
                         </ul>
                     </li>
                     <li>
@@ -266,8 +266,8 @@
                                                 <td>Самый популярный, совместимый</td>
                                                 <td>
                                                     <div class="btn-group">
-                                                    <a class="btn btn-primary" target="_blank" href="https://ubuntu.com/download/desktop">Ubuntu</a>
-                                                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <a class="btn btn-ubuntu" target="_blank" href="https://ubuntu.com/download/desktop">Ubuntu</a>
+                                                    <button type="button" class="btn btn-ubuntu dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <span class="sr-only">Toggle Dropdown</span>
                                                     </button>
                                                     <div class="dropdown-menu">
@@ -287,7 +287,7 @@
                                                 <td>Arch</td>
                                                 <td>Вы можете установить почти все пакеты из AUR`а, почти всё новейшее, но стабильность не гарантируется</td>
                                                 <td>
-                                                    <a class="btn btn-primary target="_blank"" href="https://manjaro.org/download/">Manjaro</a> 
+                                                    <a class="btn btn-primary" target="_blank" href="https://manjaro.org/download/">Manjaro</a>
                                                 </td>
                                             </tr>
                                         </tbody>
