--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                         <tbody>
                                             <tr>
                                                 <th scope="row">1</th>
-                                                <td styles="vertical-align:center;">Ubuntu</td>
+                                                <td>Ubuntu</td>
                                                 <td>Отлично</td>
                                                 <td>DEB</td>
                                                 <td>Самый популярный, совместимый</td>
