--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <th scope="row">1</th>
-                                                <td>Ubuntu</td>
-                                                <td>Отлично</td>
-                                                <td>DEB</td>
-                                                <td>Самый популярный, совместимый</td>
+                                                <th scope="row" style="vertical-align:middle;">1</th>
+                                                <td style="vertical-align:middle;">Ubuntu</td>
+                                                <td style="vertical-align:middle;">Отлично</td>
+                                                <td style="vertical-align:middle;">DEB</td>
+                                                <td style="vertical-align:middle;">Самый популярный, совместимый</td>
                                                 <td>
                                                     <div class="btn-group">
                                                     <a class="btn btn-ubuntu" target="_blank" href="https://ubuntu.com/download/desktop">Ubuntu</a>
@@ -281,13 +281,13 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <th scope="row">2</th>
-                                                <td>Manjaro</td>
-                                                <td>Отлично</td>
-                                                <td>Arch</td>
-                                                <td>Вы можете установить почти все пакеты из AUR`а, почти всё новейшее, но стабильность не гарантируется</td>
+                                                <th scope="row" style="vertical-align:middle;">2</th>
+                                                <td style="vertical-align:middle;">Manjaro</td>
+                                                <td style="vertical-align:middle;">Отлично</td>
+                                                <td style="vertical-align:middle;">Arch</td>
+                                                <td style="vertical-align:middle;">Вы можете установить почти все пакеты из AUR`а, почти всё новейшее, но стабильность не гарантируется</td>
                                                 <td>
-                                                    <a class="btn btn-primary" target="_blank" href="https://manjaro.org/download/">Manjaro</a>
+                                                    <a class="btn btn-manjaro" target="_blank" href="https://manjaro.org/download/">Manjaro</a>
                                                 </td>
                                             </tr>
                                         </tbody>
