--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                       <img src="assets/images/epicgames.jpg" class="card-img-top" alt="Placeholder">
                         <div class="card-body">
                           <h5 class="card-title">Раздача Epic Games</h5>
-                            <p class="card-text">BORDERLANDS 2 и BORDERLANDS: THE PRE-SEQUEL в коллекции BORDERLANDS: THE HANDSOME COLLECTION.</p>
+                            <p class="card-text">BORDERLANDS 2 и BORDERLANDS: THE PRE-SEQUEL</p>
                             <span class="badge badge-warning">Действует до 04.06.2020 в 20:00</span><br><br>
                             <a href="https://www.epicgames.com" target="_blank" class="btn btn-primary">На сайт</a>
                         </div>
@@ -238,7 +238,7 @@
                       <img src="assets/images/epicgames.jpg" class="card-img-top" alt="Placeholder">
                         <div class="card-body">
                           <h5 class="card-title">Раздача Epic Games</h5>
-                            <p class="card-text">SLUDGE LIFE</p>
+                            <p class="card-text">SLUDGE LIFE</p><br>
                             <span class="badge badge-warning">Действует до 28.05.2021 20:00</span><br><br>
                             <a href="https://www.epicgames.com" target="_blank" class="btn btn-primary">На сайт</a>
                         </div>
