--- a/browsers.html
+++ b/browsers.html
@@ -255,48 +255,14 @@
                                       <i class="material-icons">code</i>
                                   </div>
                                   <div class="card-body file-info">
-                                      <p>user_info.java</p>
-                                      <span class="file-size">12.7kb</span><br>
-                                      <span class="file-date">Last Accessed: 6 hours ago</span>
+                                      <p>[название]</p>
+                                      <span class="file-size">[размер] МБ</span><br>
+                                      <span class="file-date">Версия: <span class="badge badge-success">[версия]</span></span><br>
+                                      <span class="file-size"><a href="#" target="_blank" class="btn btn-success" disabled>Скачать</a> [размер] МБ</span>
                                   </div>
                               </div>
                           </div>
-                          <div class="col-lg-6 col-xl-3">
-                              <div class="card file audio">
-                                  <div class="card-header file-icon">
-                                      <i class="material-icons">volume_up</i>
-                                  </div>
-                                  <div class="card-body file-info">
-                                      <p>music_1.mp3</p>
-                                      <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Последний доступ: 7 дней назад</span>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-lg-6 col-xl-3">
-                              <div class="card file audio">
-                                  <div class="card-header file-icon">
-                                      <i class="material-icons">volume_up</i>
-                                  </div>
-                                  <div class="card-body file-info">
-                                      <p>music_1.mp3</p>
-                                      <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Последний доступ: 7 дней назад</span>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-lg-6 col-xl-3">
-                              <div class="card file audio">
-                                  <div class="card-header file-icon">
-                                      <i class="material-icons">volume_up</i>
-                                  </div>
-                                  <div class="card-body file-info">
-                                      <p>music_1.mp3</p>
-                                      <span class="file-size">37.4mb</span><br>
-                                      <span class="file-date">Последний доступ: 7 дней назад</span>
-                                  </div>
-                              </div>
-                          </div>
+                          <!-- Сюда шаблон -->
                       </div>
                   </div>
                   <!-- Конец страницы -->
