--- a/browsers.html
+++ b/browsers.html
@@ -258,7 +258,7 @@
                                       <p>[название]</p>
                                       <span class="file-size">[размер] МБ</span><br>
                                       <span class="file-date">Версия: <span class="badge badge-success">[версия]</span></span><br>
-                                      <span class="file-size"><a href="#" target="_blank" class="btn btn-success" disabled>Скачать</a> [размер] МБ</span>
+                                      <span class="file-size"><button type="button" class="btn btn-success" disabled>Скачать</button> [размер] МБ</span>
                                   </div>
                               </div>
                           </div>
