--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
         <meta name="keywords" content="admin,dashboard">
         <meta name="author" content="stacks">
         <!-- Вышеприведенные 6 мета-тегов *должны* идти первыми в загаловке; любое другое содержимое заголовка должно быть *после* этих тегов -->
-        <meta name="yandex-verification" content="41e4d77497aeb9ff" />
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+         m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+         ym(66348850, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true
+         });
+         </script>
+         <noscript><div><img src="https://mc.yandex.ru/watch/66348850" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+         <!-- /Yandex.Metrika counter -->
 
         <!-- Название страницы -->
         <title>AquaPrograms - Главная</title>
