--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="sidebar-title">Разделы</li>
           <li><a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
             <ul class="sub-menu">
-              <li><a href="#">Браузеры</a></li>
+              <li><a href="browsers.html">Браузеры</a></li>
               <li><a href="#">Архиваторы</a></li>
             </ul>
           </li>
