--- a/browsers.html
+++ b/browsers.html
@@ -23,7 +23,7 @@
           <li><a href="index.html"><i class="material-icons">dashboard</i>Главная</a></li>
           <li><a class="disabled" href="#"><i class="material-icons">person_outline</i>Профиль</a></li>
           <li class="sidebar-title">Разделы</li>
-          <li><a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
+          <li class="active-page"><a href=""><i class="material-icons">apps</i>Программы<i class="material-icons has-sub-menu">keyboard_arrow_left</i></a>
             <ul class="sub-menu">
               <li><a class="active" href="browsers.html">Браузеры</a></li>
               <li><a href="archives.html">Архиваторы</a></li>
