--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
     <div class="lime-container">
       <div class="lime-body">
         <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <div class="card bg-info text-white">
+                <div class="card-body">
+                  <div class="dashboard-info">
+                    <div class="info-text">
+                      <h5 class="card-title">Добро пожаловать на наш сайт!</h5>
+                      <p> </p>Наш сайт находится на этапе разработки.<br>
+                      Вы можете посмотреть наши планы на будущее, нажав на кнопку внизу.<br>
+                      Мы надеемся что сайт всё таки будет закончен и вы увидете его готовым через <strong>год</strong><br>
+                      Но это не точно (:<br><a class="btn btn-warning m-t-xs" href="#">Узнать прогресс</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card stat-card">
+                <div class="card-body">
+                  <h5 class="card-title">Прогресс</h5><br><br>
+                  <h2 class="float-right">10%</h2>
+                  <p>% выполненных заданий</p>
+                  <div class="progress" style="height: 10px;">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div><br><br><br><br>
+                </div>
+              </div>
+            </div>
+            <div class="col-4"></div>
+          </div>
         </div>
       </div>
       <div class="lime-footer">
