--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <div class="info-text">
                       <h5 class="card-title">Добро пожаловать на наш сайт!</h5>
                       <p> </p>Наш сайт находится на этапе разработки.<br>
-                      Вы можете посмотреть наши планы на будущее, нажав на кнопку внизу.<br>
+                      Вы можете посмотреть прогресс сайта справа<br>
                       Мы надеемся что сайт всё таки будет закончен и вы увидете его готовым через <strong>год</strong><br>
-                      Но это не точно (:<br><a class="btn btn-warning m-t-xs" href="#">Узнать прогресс</a>
+                      Но это не точно (:<br><br>
                     </div>
                   </div>
                 </div>
@@ -85,16 +85,23 @@
             <div class="col-4">
               <div class="card stat-card">
                 <div class="card-body">
-                  <h5 class="card-title">Прогресс</h5><br><br>
-                  <h2 class="float-right">10%</h2>
+                  <h5 class="card-title">Прогресс</h5><br>
+                  <h2 class="float-right">??%</h2>
                   <p>% выполненных заданий</p>
                   <div class="progress" style="height: 10px;">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div><br><br><br><br>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div><br><br><br>
                 </div>
               </div>
             </div>
-            <div class="col-4"></div>
+            <div class="col-4">
+              <div class="card bg-dark text-white"><img class="card-img" src="assets/images/Trello.png" alt="...">
+                <div class="card-img-overlay">
+                  <h5 class="card-title">Мы в Trello</h5>
+                  <p class="card-text">Следите за нашими наработками в удобном редакторе заметок, и не только.</p><br><br><br><a class="btn btn-trello btn-block" href="#"><strong>Перейти</strong></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
