--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                       <p> </p>Наш сайт находится на этапе разработки.<br>
                       Вы можете посмотреть прогресс сайта справа<br>
                       Мы надеемся что сайт всё таки будет закончен и вы увидете его готовым через <strong>год</strong><br>
-                      Но это не точно (:<br><br>
+                      Но это не точно :-)<br><br>
                     </div>
                   </div>
                 </div>
@@ -98,8 +98,16 @@
               <div class="card bg-dark text-white"><img class="card-img" src="assets/images/Trello.png" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title">Мы в Trello</h5>
-                  <p class="card-text">Следите за нашими наработками в удобном редакторе заметок, и не только.</p><br><br><br><a class="btn btn-trello btn-block" href="#"><strong>Перейти</strong></a>
+                  <p class="card-text">Следите за нашими наработками в удобном редакторе заметок, и не только.</p><br><br><br><a class="btn btn-trello btn-block" href="https://trello.com/b/DHQv19iQ/aqua-programs" target="_blank"><strong>Перейти</strong></a>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <div class="card bg-dark text-white">
+                <iframe class="card" width="349" height="205" src="https://www.youtube.com/embed/rMIMU5v4qfk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4 style="font-family: Montserrat; text-align: center;">Видео от наших спонсоров</h4><br>
               </div>
             </div>
           </div>
